--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# macOS file
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -60,6 +63,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+/database.db
 
 # Flask stuff:
 instance/
