--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,57 @@
+absl-py==1.4.0
 alembic==1.10.4
+attrs==23.1.0
+boto3==1.26.123
+botocore==1.29.123
+cffi==1.15.1
 click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+filelock==3.12.0
 Flask==2.2.3
 Flask-Cors==3.0.10
 flask-marshmallow==0.15.0
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
+flatbuffers==23.3.3
+fonttools==4.39.3
+gunicorn==20.1.0
 importlib-metadata==6.5.0
 importlib-resources==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
+kiwisolver==1.4.4
 Mako==1.2.4
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 marshmallow-sqlalchemy==0.29.0
+matplotlib==3.7.1
+mediapipe==0.9.3.0
+mpmath==1.3.0
+networkx==3.1
+numpy==1.24.3
+opencv-contrib-python==4.7.0.72
 packaging==23.1
+pandas==2.0.1
+Pillow==9.5.0
+protobuf==3.20.3
+pycparser==2.21
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3
+s3transfer==0.6.0
 six==1.16.0
+sounddevice==0.4.6
 SQLAlchemy==2.0.10
+sympy==1.11.1
 tomli==2.0.1
+torch==2.0.0
 typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==1.26.15
 Werkzeug==2.2.3
 yapf==0.33.0
 zipp==3.15.0
