--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ marshmallow==3.19.0
 marshmallow-enum==1.5.1
 marshmallow-sqlalchemy==0.29.0
 matplotlib==3.7.1
-mediapipe==0.9.3.0
+# mediapipe==0.9.3.0
 mpmath==1.3.0
 networkx==3.1
 numpy==1.24.3
