--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ sounddevice==0.4.6
 SQLAlchemy==2.0.10
 sympy==1.11.1
 tomli==2.0.1
-torch==2.0.0
+# torch==2.0.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.15
