--- a/requirements.txt
+++ b/requirements.txt
@@ -27,14 +27,14 @@ MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 marshmallow-sqlalchemy==0.29.0
-matplotlib==3.7.1
+# matplotlib==3.7.1
 # mediapipe==0.9.3.0
 mpmath==1.3.0
 networkx==3.1
 numpy==1.24.3
 # opencv-contrib-python==4.7.0.72
 packaging==23.1
-pandas==2.0.1
+# pandas==2.0.1
 Pillow==9.5.0
 protobuf==3.20.3
 pycparser==2.21
